[package]
name = "varview"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Gaurav Sablok <codeprog@icloud.com>"]
description = "sam variant visualizer"
homepage = "https://github.com/omicscode/varview"
repository = "https://github.com/omicscode/varview"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
color-eyre = "0.6"
walkdir = "2.5"
unicode-width = "0.1"
